# artificial_wisdom_research

./: .gitignore  AGENTS.md  README.md  STATUS.md
articles/Generational Information Transfer with Neuroevolution on Control Tasks/: refs.bib  sample-sigconf.tex
articles/Generative Adversarial Neuroevolution for Control Behaviour Imitation/: refs.bib  sample-sigconf.tex
articles/Is Deep Learning Limiting, Investigations into Behavior Cloning/: report.tex
articles/Neuroevolution of Recurrent Architectures on Control Tasks/: iclr2022_conference.bib  iclr2022_conference.tex
experiments/: AGENTS.md
experiments/001_cartpole_static_mlp_reward_ga/: README.md  STATUS.md
experiments/001_cartpole_static_mlp_reward_ga/code/: pyproject.toml
experiments/001_cartpole_static_mlp_reward_ga/code/src/: AGENTS.md
experiments/001_cartpole_static_mlp_reward_ga/code/src/awr/: behavior_prediction.py  models.py
experiments/001_cartpole_static_mlp_reward_ga/code/src/awr/experiments/: act_pred_cartpole.py  act_pred_sb3.py
experiments/001_cartpole_static_mlp_reward_ga/code/tests/: test_config.py  test_evolution.py  test_plateau.py  test_reporting.py
experiments/002_cartpole_constant_zero_action_imitation/: README.md  STATUS.md
experiments/002_cartpole_constant_zero_action_imitation/code/: .gitignore
experiments/003_cartpole_sb3_ppo_action_imitation/: README.md  STATUS.md
units/005_mnist_minimal_pytorch/: README.md  STATUS.md
units/007_cartpole_dynamic_gpu_ga/: README.md  STATUS.md
units/008_torch_cartpole_physics_parity/: README.md  STATUS.md
units/010_gpu_cartpole_score_mean500/: README.md  STATUS.md
units/012_ppo_behavior_benchmark/: README.md  STATUS.md
units/013_experiment_runtime_tooling/: BACKGROUND_RUNS.md
units/013_supervised_ppo_behavior_clone/: STATUS.md
units/014_ga_ppo_action_clone/: README.md  STATUS.md
units/014_supervised_ppo_behavior_clone/: README.md  STATUS.md
units/015_ga_ppo_action_clone/: STATUS.md
(+75 files in other folders)
