[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artificial-wisdom-research"
version = "0.1.0"
description = "Evolutionary computation research scaffold."
requires-python = ">=3.11"
dependencies = [
  "gymnasium>=1.0.0",
  "numpy>=1.26.0",
  "stable-baselines3>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
amd-windows = [
  "rocm-sdk-core @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/rocm_sdk_core-7.2.1-py3-none-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
  "rocm-sdk-devel @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/rocm_sdk_devel-7.2.1-py3-none-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
  "rocm-sdk-libraries-custom @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/rocm_sdk_libraries_custom-7.2.1-py3-none-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
  "rocm @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/rocm-7.2.1.tar.gz ; platform_system == 'Windows' and python_version == '3.12'",
  "torch @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/torch-2.9.1%2Brocm7.2.1-cp312-cp312-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
  "torchaudio @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/torchaudio-2.9.1%2Brocm7.2.1-cp312-cp312-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
  "torchvision @ https://repo.radeon.com/rocm/windows/rocm-rel-7.2.1/torchvision-0.24.1%2Brocm7.2.1-cp312-cp312-win_amd64.whl ; platform_system == 'Windows' and python_version == '3.12'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
